# Ros2RoboticArm

./: .gitignore  CMakeLists.txt  QUICK_START.md  README.md  SETUP_GUIDE.md  SYSTEM_SUMMARY.md  TEST_DEMONSTRATION.md  activate_env.sh  demo.py  demo_showcase.sh  demo_simple.py  kill_ports.sh  package-lock.json  package.xml  requirements.txt  requirements_simple.txt  setup.sh  setup_ros2.sh  start_system.sh  test_drag_drop.js  test_system.sh
backend/: main.py  main_simple.py
config/: inspection.rviz
drawflow_ui/: index.html  robot_visualizer.html  script.js  styles.css
launch/: inspection_system.launch.py
ros2_nodes/: __init__.py  camera_node.py  inspection_node.py  mock_robot_node.py  robot_controller.py
src/Ros2RoboticArm/: setup_ros2.sh
urdf/: robot_arm.urdf
